[metadata]
name = quantnote_query_api
version = 0.0.1
description = Client API library for QuantNote
long_description = file: README.md, LICENSE
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages =
    quantnote_query_api
    quantnote_templates
install_requires =
    pandas~=1.5.3
    requests~=2.28.1
    python-dotenv~=0.21.0
    tqdm~=4.64.1
    plotly~=5.13.0
    kaleido~=0.2.1
    wordcloud~=1.8.2.2
    Pillow~=9.4.0
    setuptools~=65.6.3
